--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
-    "vue-router": "^3.1.6"
+    "vue-router": "^3.3.3",
+    "websocket-extensions": "^0.1.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-router": "~4.3.0",
